2012-12-30  2.0 - https://bitbucket.org/agaricusb/srg2source/downloads/Srg2Source-2.0.jar
    * Add new experimental 'symbol range map' feature, for 1000x faster renaming in some cases
    * Add method parameter renaming
    * Add log file for all actions
    * Add batch mode
    * Change project name from ApplySrg2Source to Srg2Source

2012-12-10  1.0 - https://github.com/downloads/agaricusb/Srg2Source/ApplySrg2Source-1.0.jar
    * Initial release

