@@ -1,3 +1,7 @@
+2013-01-10  2.1 - https://bitbucket.org/agaricusb/srg2source/downloads/Srg2Source-2.1.jar
+    * Continue on null referents with templated method parameters, instead of aborting
+    Allows extracting symbol range map from MCPC 1.4.6llows extracting symbol range map from MCPC 1.4.6
+
 2012-12-30  2.0 - https://bitbucket.org/agaricusb/srg2source/downloads/Srg2Source-2.0.jar
     * Add new experimental 'symbol range map' feature, for 1000x faster renaming in some cases
     * Add method parameter renaming
